# chtmx

./: .releaserc.json  AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml  docker.just  justfile
.github/scripts/: update-version.sh
.github/workflows/: verify.yaml
assets/: custom.css  t.css
skills/: clickhouse-data-formats.md  clickhouse-rust.md
src/: assets.rs  config.rs  db.rs  index.rs  main.rs  markdown_parser.rs
src/db/: discovery.rs  mod.rs  table.rs
src/upload/: mod.rs
src/view/: about.rs  databases.rs  home.rs  how_it_works.rs  mod.rs  upload.rs
tests/: filter_column_values.hurl  filter_table.hurl  health_db.hurl  hurl.just  test_data.csv  upload_csv.hurl  upload_page.hurl  variables
