[package]
name = "chtmx"
version = "1.5.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7"
actix-web = "4"
chrono = "0.4"
clickhouse = "0.12.2"
csv = "1.4.0"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
maud = { version = "0.27.0", features = ["actix-web"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
